css/tools.css
div > div > p {
    margin: 4px;
}
h3 {
    margin-top: 0px;
}
hr {
    clear: both;
}
.main {
    float: left;
}
.side {
    float: right;
}
.caption {
    font-style: italic;
}
.code {
    font-family: 'courier new';
}
.dead {
    text-decoration: line-through;
}
.wide-top {
    margin-top: 10px;
}
.wide-bottom {
    margin-bottom: 10px;
}
.tooltip {
    visibility: hidden;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    top: 100%;
}
#thprac_img {
    background-image: url('../games/tools/thprac_small.png');
    height: 180px;
    width: 180px;
}
#thprac_img:hover {
    background-image: url('../games/tools/thprac.png');
    height: 720px;
    width: 720px;
    z-index: 1;
    top: 50%;
    left: 50%;
    position: absolute;
    border: 3px solid grey;
}
#thcrap_link {
    font: 14px verdana,sans-serif;
}
@media only screen and (min-width: 1100px) and (max-width: 1400px) {
    .wrap {
        margin-left: 15%;
        margin-right: 15%;
    }
}
@media only screen and (min-width: 800px) and (max-width: 1100px) {
    h1 {
        margin-bottom: 15px;
        clear: both;
    }
    .wrap {
        margin-left: 10%;
        margin-right: 10%;
    }
}
@media only screen and (max-width: 800px) {
    h1 {
        margin-bottom: 15px;
        margin-top: 15px;
    }
}

